rewording - better intent - better ubiquitous language
